--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: cloudprint
 Maintainer: David Steele <dsteele@gmail.com>
-Section: python
+Section: net
 Priority: optional
 Build-Depends: python-setuptools (>= 0.6b3), python (>= 2.6.6-3), debhelper (>= 7.4.3)
 Standards-Version: 3.9.4
@@ -11,7 +11,7 @@ Vcs-Git: https://github.com/davesteele/cloudprint-debian.git
 
 Package: cloudprint
 Architecture: all
-Depends: cups, ${misc:Depends}, ${python:Depends}
+Depends: python-cups, cups, ${misc:Depends}, ${python:Depends}
 Description: Google Cloud Print proxy
  Worker script to support a Google Cloud Print proxy. This can make
  locally-configured printers to be accessed by local or remote users over
