Replace rsyslog depends with system-log-daemon

--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Vcs-Git: https://github.com/davesteele/cloudprint-service.git -b release
 Package: cloudprint
 Architecture: all
 Depends: python-cups, cups, python-daemon, ${misc:Depends}, ${python:Depends},
- python-pkg-resources, rsyslog
+ python-pkg-resources, system-log-daemon
 Description: Google Cloud Print proxy
  Worker script to support a Google Cloud Print proxy. This can make
  locally-configured printers to be accessed by local or remote users over
