--- a/debian/control
+++ b/debian/control
@@ -5,9 +5,9 @@ Priority: optional
 Build-Depends: python-setuptools (>= 0.6b3), python (>= 2.6.6-3), debhelper (>= 7.4.3)
 Standards-Version: 3.9.5
 X-Python-Version: >= 2.7
-Homepage: http://davesteele.github.io/cloudprint-service/
+Homepage: https://pypi.python.org/pypi/cloudprint/
 Vcs-Browser: https://github.com/davesteele/cloudprint-service
-Vcs-Git: https://github.com/davesteele/cloudprint-service.git -b release
+Vcs-Git: https://github.com/davesteele/cloudprint-service.git -b master
 
 Package: cloudprint
 Architecture: all
