Update copyright to 2014
In the man pages and the copyright file.

--- a/debian/cloudprint.man.in
+++ b/debian/cloudprint.man.in
@@ -1,4 +1,4 @@
-.\" Copyright 2013 David Steele <dsteele@gmail.com>
+.\" Copyright 2013-2014 David Steele <dsteele@gmail.com>
 .\" This file is part of cloudprint
 .\" Available under the terms of the GNU General Public License version 2 or later
 .TH PROG 1 2014-04-16 Linux "User Commands"
