control: Fix dependencies
Remove sysv init reference, and add gi and webkit.

--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Package: cloudprint-service
 Architecture: all
 Provides: cloudprintd
 Depends: cloudprint, ${misc:Depends},
- initscripts (>= 2.88dsf-13.3)
+    systemd, python-gi, python-webkit
 Description: provide a service for sharing printers on Google Cloud Print
  Share locally-defined CUPS printers with the Google Cloud Print service.
  The printers can be accessed locally or remotely by authorized users via
