--- a/debian/control
+++ b/debian/control
@@ -22,8 +22,7 @@ Description: Google Cloud Print proxy
 Package: cloudprint-service
 Architecture: all
 Provides: cloudprintd
-Depends: cloudprint, ${misc:Depends},
-    systemd, python-gi, python-webkit
+Depends: cloudprint, ${misc:Depends}, systemd
 Description: provide a service for sharing printers on Google Cloud Print
  Share locally-defined CUPS printers with the Google Cloud Print service.
  The printers can be accessed locally or remotely by authorized users via
