Change auth file name
... to reflect the new format in the upstream OAuth code. Also,
delete the old file if present on install.

--- a/debian/cloudprint-service.cloudprintd.service
+++ b/debian/cloudprint-service.cloudprintd.service
@@ -3,7 +3,7 @@ Description=Google Cloud Print proxy service
 After=cups.service
 
 [Service]
-ExecStart=/usr/sbin/cloudprintd -a /var/lib/cloudprintd/authfile
+ExecStart=/usr/sbin/cloudprintd -a /var/lib/cloudprintd/authfile.json
 Type=simple
 
 [Install]
