Update for new python-daemon
The new 2.0 python-daemon is incompatible with 1.5.x.

http://permalink.gmane.org/gmane.linux.debian.devel.python.modules/22964

--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Vcs-Git: https://github.com/davesteele/cloudprint-service.git -b master
 
 Package: cloudprint
 Architecture: all
-Depends: python-cups, cups, python-daemon (<= 1.6), ${misc:Depends},
+Depends: python-cups, cups, python-daemon (>= 2.0), ${misc:Depends},
  python (<= 2.7), python-pkg-resources, rsyslog | system-log-daemon
 Description: Google Cloud Print proxy
  Worker script to support a Google Cloud Print proxy. This can make
