Invoke systemd restart on failure configuration
A workaround for a persistent failure the second time through
get_printers().

--- a/debian/cloudprint-service.cloudprintd.service
+++ b/debian/cloudprint-service.cloudprintd.service
@@ -5,6 +5,8 @@ After=cups.service
 [Service]
 ExecStart=/usr/sbin/cloudprintd -a /var/lib/cloudprintd/authfile.json
 Type=simple
+Restart=on-failure
+RestartSec=5
 
 [Install]
 WantedBy=multi-user.target
