cloudprint.man.in: Fix "See Also" list

--- a/debian/cloudprint.man.in
+++ b/debian/cloudprint.man.in
@@ -67,4 +67,4 @@ Default location for storing account authentication credentials
 Default location for storing internal authentication tokens
 
 .SH SEE ALSO
-.BR cloudprint-service(7), cloudprintd(8), cloudprint(1), cps-auth(1)
+.BR cloudprint-service(7), cps-auth(1)
