Revert "Change auth file name"
This reverts commit 65a757fa786623665dc46f07e35f23af77da9b5b.

--- a/debian/cloudprint-service.cloudprintd.service
+++ b/debian/cloudprint-service.cloudprintd.service
@@ -3,7 +3,7 @@ Description=Google Cloud Print proxy service
 After=cups.service
 
 [Service]
-ExecStart=/usr/sbin/cloudprintd -a /var/lib/cloudprintd/authfile.json
+ExecStart=/usr/sbin/cloudprintd -a /var/lib/cloudprintd/authfile
 Type=simple
 Restart=on-failure
 RestartSec=5
