--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Description: Google Cloud Print proxy
 Package: cloudprint-service
 Architecture: all
 Provides: cloudprintd
-Depends: cloudprint, ${misc:Depends},
+Depends: cloudprint, ${misc:Depends}, python (>= 2.7)
 Description: provide a service for sharing printers on Google Cloud Print
  Share locally-defined CUPS printers with the Google Cloud Print service.
  The printers can be accessed locally or remotely by authorized users via
