--- a/debian/rules
+++ b/debian/rules
@@ -8,14 +8,16 @@
 
 override_dh_auto_install:
 	python setup.py install --root=debian/cloudprint --install-layout=deb --install-lib=/usr/share/cloudprint --install-scripts=/usr/share/cloudprint
+	find debian/cloudprint -name \*.pyc -exec rm -f {} \;
 
 override_dh_auto_build:
 	/bin/sed 's/PROG/cloudprint/g' debian/cloudprint.man.in >debian/cloudprint.1
 	/bin/sed 's/PROG/cloudprintd/g' debian/cloudprint.man.in >debian/cloudprintd.8
 	/bin/sed 's/cloudprintd 1/cloudprintd 8/' debian/cloudprintd.8 >debian/cloudprintd.8.tmp
 	/bin/mv debian/cloudprintd.8.tmp debian/cloudprintd.8
-
+	dh_auto_build
 
 override_dh_installinit:
 	dh_installinit --name=cloudprintd
 
+# vim: set noexpandtab:
