--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Package: cloudprint
 Architecture: all
 Depends: python-cups, cups, python-daemon (<< 2.0), ${misc:Depends},
  python (>= 2.7), python-pkg-resources, rsyslog | system-log-daemon,
- python-requests
+ python-requests, python-configargparse,
 Description: Google Cloud Print proxy
  Worker script to support a Google Cloud Print proxy. This can make
  locally-configured printers to be accessed by local or remote users over
