Add site name support to cloudprint
Prepend the site name to all printer names.

--- a/debian/cloudprint.conf
+++ b/debian/cloudprint.conf
@@ -14,3 +14,7 @@
 # include = [pattern1, pattern2]
 # exclude = [pattern3, pattern4]
 
+#
+# Site name, to be prepended to all printer names
+#
+# sitename = high-school
