--- a/debian/cloudprint.man.in
+++ b/debian/cloudprint.man.in
@@ -1,7 +1,7 @@
 .\" Copyright 2013-2015 David Steele <dsteele@gmail.com>
 .\" This file is part of cloudprint
 .\" Available under the terms of the GNU General Public License version 2 or later
-.TH cloudprint 1 2015-05-31 Linux "User Commands"
+.TH cloudprint 1 2015-11-14 Linux "User Commands"
 .SH NAME
 cloudprint \- share CUPS printers with Google Cloud Print
 
@@ -49,6 +49,9 @@ verbose logging.
 .TP
 \fB\-x\fR \fIregexp\fR, \fB\-\-exclude\fR \fIregexp\fR
 exclude local printers matching regular expression from the start of the printer name.
+.TP
+\fB\-s\fR \fIsitename\fR, \fB\-\-sitename\fR \fIsitename\fR
+define a site name to be prepended to all printer names.
 .TP
 \fB\-h\fR, \fB\-\-help\fR
 display help
