--- a/debian/control
+++ b/debian/control
@@ -1,22 +1,32 @@
 Source: cloudprint
 Maintainer: David Steele <dsteele@gmail.com>
 Section: net
+Testsuite: autopkgtest
 Priority: optional
-Build-Depends: python-setuptools (>= 0.6b3), python (>= 2.6.6-3), debhelper (>= 7.4.3),
-                dh-systemd (>= 1.5), dh-python
+Build-Depends: python-setuptools,
+               python,
+               debhelper (>= 7.4.3),
+               dh-systemd,
+               dh-python
 Standards-Version: 3.9.6
-X-Python-Version: >= 2.7
-Homepage: https://pypi.python.org/pypi/cloudprint/
 Vcs-Browser: https://github.com/davesteele/cloudprint-service
 Vcs-Git: https://github.com/davesteele/cloudprint-service.git -b master
-Testsuite: autopkgtest
+Homepage: https://pypi.python.org/pypi/cloudprint/
+X-Python-Version: >= 2.7
 
 Package: cloudprint
 Architecture: all
-Depends: python-cups, cups, python-daemon (>= 2.0), ${misc:Depends},
- python (>= 2.7), python-pkg-resources, rsyslog | system-log-daemon,
- python-requests, python-configargparse, python3-configargparse,
- python3-cups,
+Depends: python-cups,
+         cups,
+         python-daemon (>= 2.0),
+         ${misc:Depends},
+         python (>= 2.7),
+         python-pkg-resources,
+         rsyslog | system-log-daemon,
+         python-requests,
+         python-configargparse,
+         python3-configargparse,
+         python3-cups
 Description: Google Cloud Print proxy
  Worker script to support a Google Cloud Print proxy. This can make
  locally-configured printers to be accessed by local or remote users over
@@ -24,10 +34,11 @@ Description: Google Cloud Print proxy
 
 Package: cloudprint-service
 Architecture: all
+Depends: cloudprint,
+         ${misc:Depends},
+         systemd
 Provides: cloudprintd
-Depends: cloudprint, ${misc:Depends}, systemd
 Description: provide a service for sharing printers on Google Cloud Print
  Share locally-defined CUPS printers with the Google Cloud Print service.
  The printers can be accessed locally or remotely by authorized users via
  multiple platforms.
-
