Add openssl as a dependency
Per

https://github.com/armooo/cloudprint/issues/125

package-installed cloudprint failed with an SSL error, but, after
establishing pip and installing via pip, cloudprint works. I don't see
what pip might be installing differently, but the installation of
python-pip called in openssl. Let's add that to the dependency list.

--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Package: cloudprint
 Architecture: all
 Depends: python-cups,
          cups,
+         openssl,
          python-daemon (>= 2.0),
          ${misc:Depends},
          python (>= 2.7),
