--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,10 @@ Build-Depends: python-setuptools,
                python,
                debhelper (>= 7.4.3),
                dh-systemd,
-               dh-python
+               dh-python,
+               python-requests-mock,
+               python-configargparse,
+               python-cups,
 Standards-Version: 3.9.6
 Vcs-Browser: https://github.com/davesteele/cloudprint-service
 Vcs-Git: https://github.com/davesteele/cloudprint-service.git -b master
@@ -19,15 +22,13 @@ Architecture: all
 Depends: python-cups,
          cups,
          openssl,
-         python-daemon (>= 2.0),
+         python-daemon (<< 2.0),
          ${misc:Depends},
          python (>= 2.7),
          python-pkg-resources,
          rsyslog | system-log-daemon,
          python-requests,
          python-configargparse,
-         python3-configargparse,
-         python3-cups
 Description: Google Cloud Print proxy
  Worker script to support a Google Cloud Print proxy. This can make
  locally-configured printers to be accessed by local or remote users over
