--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: cloudprint
-Maintainer: David Steele <dsteele@gmail.com>
+Maintainer: David Steele <steele@debian.org>
 Section: net
 Testsuite: autopkgtest
 Priority: optional
@@ -7,8 +7,14 @@ Build-Depends: python-setuptools,
                python,
                debhelper (>= 7.4.3),
                dh-systemd,
-               dh-python
-Standards-Version: 3.9.6
+               dh-python,
+               python-pytest,
+               python-mock,
+               python-requests,
+               python-requests-mock,
+               python-configargparse,
+               python-cups,
+Standards-Version: 3.9.8
 Vcs-Browser: https://github.com/davesteele/cloudprint-service
 Vcs-Git: https://github.com/davesteele/cloudprint-service.git -b master
 Homepage: https://pypi.python.org/pypi/cloudprint/
