--- a/debian/cloudprint-service.cloudprintd.service
+++ b/debian/cloudprint-service.cloudprintd.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Google Cloud Print proxy service
-After=cups.service
+After=cups.service network.target
 
 [Service]
 ExecStart=/usr/sbin/cloudprintd -a /var/lib/cloudprintd/authfile.json
