--- a/debian/control
+++ b/debian/control
@@ -2,16 +2,16 @@ Source: cloudprint
 Maintainer: David Steele <steele@debian.org>
 Section: net
 Priority: optional
-Build-Depends: python-setuptools,
-               python,
+Build-Depends: python3-setuptools,
+               python3,
                debhelper (>= 9.20160709),
                dh-python,
-               python-pytest,
-               python-mock,
-               python-requests,
-               python-requests-mock,
-               python-configargparse,
-               python-cups,
+               python3-pytest,
+               python3-mock,
+               python3-requests,
+               python3-requests-mock,
+               python3-configargparse,
+               python3-cups,
 Standards-Version: 4.1.1
 Vcs-Browser: https://github.com/davesteele/cloudprint-service
 Vcs-Git: https://github.com/davesteele/cloudprint-service.git -b master
@@ -19,18 +19,16 @@ Homepage: https://pypi.python.org/pypi/cloudprint/
 
 Package: cloudprint
 Architecture: all
-Depends: python-cups,
+Depends: python3-cups,
          cups,
          openssl,
-         python-daemon (>= 2.0),
+         python3-daemon (>= 2.0),
          ${misc:Depends},
-         python (>= 2.7),
-         python-pkg-resources,
+         python3,
+         python3-pkg-resources,
          rsyslog | system-log-daemon,
-         python-requests,
-         python-configargparse,
          python3-configargparse,
-         python3-cups
+         python3-cups,
 Description: Google Cloud Print proxy
  Worker script to support a Google Cloud Print proxy. This can make
  locally-configured printers to be accessed by local or remote users over
