--- a/debian/rules
+++ b/debian/rules
@@ -4,11 +4,12 @@ export PYBUILD_NAME=cloudprint
 export PYBUILD_TEST_PYTEST=1
 
 %:
-	dh $@ --with python2,systemd --buildsystem=pybuild
+	dh $@ --with python3,systemd --buildsystem=pybuild
 
 override_dh_auto_install:
-	python setup.py install --root=debian/cloudprint --install-layout=deb --install-lib=/usr/share/cloudprint --install-scripts=/usr/share/cloudprint
+	python3 setup.py install --root=debian/cloudprint --install-layout=deb --install-lib=/usr/share/cloudprint --install-scripts=/usr/share/cloudprint
 	find debian/cloudprint -type f -name '*.pyc' -delete
+	/bin/rm -rf debian/cloudprint/usr/share/cloudprint/cloudprint/__pycache__/
 
 override_dh_auto_build:
 	dh_auto_build
