--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Section: net
 Priority: optional
 Build-Depends: python3-setuptools,
                python3,
-               debhelper (>= 9.20160709),
+               debhelper (>= 11),
                dh-python,
                python3-pytest,
                python3-mock,
