--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,7 @@ export PYBUILD_NAME=cloudprint
 export PYBUILD_TEST_PYTEST=1
 
 %:
-	dh $@ --with python3,systemd --buildsystem=pybuild
+	dh $@ --with python3 --buildsystem=pybuild
 
 override_dh_auto_install:
 	python3 setup.py install --root=debian/cloudprint --install-layout=deb --install-lib=/usr/share/cloudprint --install-scripts=/usr/share/cloudprint
@@ -18,5 +18,6 @@ override_dh_auto_build:
 	/bin/sed 's/cloudprintd 1/cloudprintd 8/' debian/cloudprintd.8 >debian/cloudprintd.8.tmp
 	/bin/mv debian/cloudprintd.8.tmp debian/cloudprintd.8
 
-override_dh_systemd_enable:
-	dh_systemd_enable --name=cloudprintd
+override_dh_installsystemd:
+	dh_installsystemd
+	ln -s cloudprint-service.service debian/cloudprint-service/lib/systemd/system/cloudprintd.service 
