control: remove redundant python3 deps

--- a/debian/control
+++ b/debian/control
@@ -19,16 +19,11 @@ Homepage: https://pypi.python.org/pypi/cloudprint/
 
 Package: cloudprint
 Architecture: all
-Depends: python3-cups,
-         cups,
+Depends: cups,
          openssl,
-         python3-daemon (>= 2.0),
          ${misc:Depends},
          ${python3:Depends},
-         python3,
-         python3-pkg-resources,
          rsyslog | system-log-daemon,
-         python3-configargparse,
 Description: Google Cloud Print proxy
  Worker script to support a Google Cloud Print proxy. This can make
  locally-configured printers to be accessed by local or remote users over
